--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
                 margin-top: 30px;
             }
         }    </style>
+    <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+<script>LA.init({id:"3LZvpKQpECMu68rS",ck:"3LZvpKQpECMu68rS"})</script>
 </head>
 <body>
     <div class="header">
